content/browser/frame_host/render_widget_host_view_child_frame.cc
@@ -560,6 +560,10 @@ void RenderWidgetHostViewChildFrame::SetActive(bool active) {
 }
 
 void RenderWidgetHostViewChildFrame::ShowDefinitionForSelection() {
+  if (frame_connector_) {
+    frame_connector_->GetRootRenderWidgetHostView()
+        ->ShowDefinitionForSelection();
+  }
 }
 
 bool RenderWidgetHostViewChildFrame::SupportsSpeech() const {
