content/browser/renderer_host/text_input_client_message_filter.h
@@ -28,6 +28,8 @@ class CONTENT_EXPORT TextInputClientMessageFilter
 
   // BrowserMessageFilter override:
   bool OnMessageReceived(const IPC::Message& message) override;
+  void OverrideThreadForMessage(const IPC::Message& message,
+                                BrowserThread::ID* thread) override;
 
  protected:
   ~TextInputClientMessageFilter() override;
